--- a/package.json
+++ b/package.json
@@ -14,8 +14,15 @@
     "url": "https://tailadmin.com"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^7.0.1",
+    "@react-oauth/google": "^0.12.1",
+    "@stripe/stripe-js": "^6.1.0",
     "apexcharts": "^3.41.0",
-    "axios": "^1.7.9",
+    "axios": "^1.8.4",
+    "emailjs-com": "^3.2.0",
+    "firebase": "^11.6.0",
     "flatpickr": "^4.6.13",
     "formik": "^2.4.6",
     "headlessui": "^0.0.0",
@@ -31,6 +38,8 @@
     "react-router-dom": "^6.14.2",
     "react-toastify": "^9.1.3",
     "sort-by": "^0.0.2",
+    "stripe": "^17.7.0",
+    "tailadmin-react-free": "file:",
     "yup": "^1.6.1"
   },
   "devDependencies": {
